--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -88,6 +88,7 @@ dependencies:
   flutter_cache_manager: ^3.3.0
   rxdart: ^0.27.7
   flutter_keyboard_visibility: ^5.4.1
+  lottie: ^2.6.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -113,7 +114,7 @@ flutter:
   assets:
     - assets/images/
     - assets/icons/
-
+    - assets/lottie/
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
