--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -90,6 +90,7 @@ dependencies:
   flutter_keyboard_visibility: ^5.4.1
   lottie: ^2.6.0
   flutter_custom_cards: ^0.2.1
+  socket_io_client: ^2.0.3+1
 dev_dependencies:
   flutter_test:
     sdk: flutter
