--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -93,7 +93,7 @@ dependencies:
   socket_io_client: ^2.0.3+1
   flutter_local_notifications: ^16.1.0
   awesome_notifications: ^0.8.2
-  
+  flutter_webrtc: ^0.9.32
 dev_dependencies:
   flutter_test:
     sdk: flutter
