--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,10 +49,8 @@ dependencies:
   uuid: ^4.0.0
   intl: ^0.18.1
   xml: ^6.3.0
-  signature: ^5.4.0
   permission_handler: ^10.4.3
   local_auth: ^2.1.7
-  flutter_launcher_icons: ^0.13.1
   retrofit: ^4.0.1
   retrofit_generator: ^7.0.8
   build_runner: ^2.1.11
@@ -89,6 +87,9 @@ dependencies:
   rxdart: ^0.27.7
   flutter_keyboard_visibility: ^5.4.1
   lottie: ^2.6.0
+  google_sign_in: ^6.1.5
+  flutter_map: ^6.0.1
+  latlong2: ^0.9.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
