--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -95,6 +95,9 @@ dependencies:
   google_sign_in: ^6.1.5
   flutter_map: ^6.0.1
   latlong2: ^0.9.0
+  geolocator: ^10.1.0
+  geocoding: ^2.1.1
+  location: ^5.0.3
 dev_dependencies:
   flutter_test:
     sdk: flutter
