--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -99,6 +99,7 @@ dependencies:
   geocoding: ^2.1.1
   location: ^5.0.3
   dropdown_textfield: ^1.0.8
+  cloudinary: ^1.2.0
   
 dev_dependencies:
   flutter_test:
