--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -100,6 +100,7 @@ dependencies:
   location: ^5.0.3
   dropdown_textfield: ^1.0.8
   cloudinary: ^1.2.0
+  rating_dialog: ^2.0.4
   
 dev_dependencies:
   flutter_test:
