--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -101,6 +101,7 @@ dependencies:
   dropdown_textfield: ^1.0.8
   cloudinary: ^1.2.0
   rating_dialog: ^2.0.4
+  windows_notification: ^1.0.0
   
 dev_dependencies:
   flutter_test:
