--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -100,6 +100,10 @@ dependencies:
   location: ^5.0.3
   dropdown_textfield: ^1.0.8
   cloudinary: ^1.2.0
+  syncfusion_flutter_datepicker: ^23.2.4
+  flutter_localizations:
+    sdk: flutter
+  snapping_sheet: ^3.1.0
   
 dev_dependencies:
   flutter_test:
