--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -22,6 +22,12 @@ if (flutterVersionName == null) {
     flutterVersionName = '1.0'
 }
 
+def keystoreProperties = new Properties()
+def keystorePropertiesFile = rootProject.file('key.properties')
+if (keystorePropertiesFile.exists()) {
+    keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
+}
+
 android {
     namespace "com.example.twg"
     compileSdkVersion 34
@@ -43,7 +49,7 @@ android {
     }
 
     defaultConfig {
-        applicationId "com.example.twg"
+        applicationId "com.clsoftwarestudio.wego"
         minSdkVersion 22
         targetSdkVersion 34
         versionCode flutterVersionCode.toInteger()
@@ -51,9 +57,19 @@ android {
         multiDexEnabled true
     }
 
+    signingConfigs {
+        release {
+           keyAlias keystoreProperties['keyAlias']
+           keyPassword keystoreProperties['keyPassword']
+           storeFile keystoreProperties['storeFile'] ? file(keystoreProperties['storeFile']) : null
+           storePassword keystoreProperties['storePassword']
+        }
+    }
+
     buildTypes {
         release {
             signingConfig signingConfigs.debug
+            signingConfig signingConfigs.release
         }
     }
 }
