--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,90 +36,70 @@ dependencies:
   cupertino_icons: ^1.0.2
 
   # Core
-  http: ^1.1.0
+  http: ^1.2.1
   dio: ^5.3.2
   get_it: ^7.2.0
   get: ^4.3.8
   json_annotation: ^4.8.0
   json_serializable: ^6.6.1
   logger: ^2.0.1
-  font_awesome_flutter: ^10.4.0
   path_provider: ^2.0.5
   provider: ^6.0.1
-  uuid: ^4.0.0
-  intl: ^0.18.1
+  uuid: ^3.0.1
+  intl: ^0.19.0
   xml: ^6.3.0
   permission_handler: ^10.4.3
-  local_auth: ^2.1.7
   retrofit: ^4.0.1
   retrofit_generator: ^7.0.8
   build_runner: ^2.1.11
   # UI
-  auto_size_text: ^3.0.0-nullsafety.0
-  pin_code_fields: ^8.0.1
   cached_network_image: ^3.1.0
   flutter_svg: ^2.0.7
-  flutter_slidable: ^3.0.0
   flutter_screenutil: ^5.0.0+2
   carousel_slider: ^4.2.1
   simple_fontellico_progress_dialog: ^0.3.0
   flutter_native_splash: ^2.2.0+1
-  insta_assets_picker: ^1.3.0
   flutter_easyloading: ^3.0.5
-  badges: ^3.1.1
-  dropdown_search: ^5.0.6
-  expand_widget: ^3.1.1
   image_picker: ^1.0.4
   url_launcher: ^6.1.11
 
   html: ^0.15.2
   shared_preferences: ^2.0.17
-  flutter_custom_tab_bar: ^1.2.1
-  google_fonts: ^5.1.0
-  dotted_border: ^2.0.0
   flutter_rating_bar: ^4.0.1
-  animated_bottom_navigation_bar: ^1.2.0
-  file_picker: ^5.2.10
   path: ^1.8.2
-  photo_view: ^0.14.0
-  connectivity_plus: ^4.0.2
-  flutter_cache_manager: ^3.3.0
   rxdart: ^0.27.7
-  flutter_keyboard_visibility: ^5.4.1
   lottie: ^2.6.0
   flutter_custom_cards: ^0.2.1
   socket_io_client: ^2.0.3+1
   flutter_local_notifications: ^16.1.0
-  awesome_notifications: ^0.8.2
   flutter_webrtc: ^0.9.32
   google_sign_in: ^6.1.5
-  flutter_map: ^6.0.1
+  flutter_map: ^7.0.0
   latlong2: ^0.9.0
-  geolocator: ^10.1.0
-  geocoding: ^2.1.1
+  geolocator: ^12.0.0
   location: ^5.0.3
-  dropdown_textfield: ^1.0.8
+  dropdown_textfield: ^1.1.0
   cloudinary: ^1.2.0
   rating_dialog: ^2.0.4
   windows_notification: ^1.0.0
-  syncfusion_flutter_datepicker: ^23.2.4
+  syncfusion_flutter_datepicker: ^25.2.6
   flutter_localizations:
     sdk: flutter
-  snapping_sheet: ^3.1.0
-  flutter_map_location_marker: ^8.0.2
+  flutter_map_location_marker: ^9.0.0
   line_awesome_flutter: ^2.0.0
-  json_theme: ^6.4.0
   linear_timer: ^2.0.0
   spring_button: ^2.0.0
-  dialog_flowtter: ^0.2.0-nullsafety.0
   device_info_plus: ^9.1.2
-  google_auth: ^0.0.3
-  googleapis_auth: ^1.5.0
   flutter_chat_ui: ^1.6.12
   flutter_chat_types: ^3.6.2
   rive: ^0.13.0
   introduction_screen: ^3.1.12
   flutter_typeahead: ^5.0.1
+  # dialog_flowtter: ^0.2.0-nullsafety.0
+  dialog_flowtter_plus: ^0.0.1
+  skeletonizer: ^1.2.0
+  chips_choice: ^3.0.1
+  dependency_validator: ^4.1.0
 
 dev_dependencies:
   flutter_test:
