--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -102,6 +102,7 @@ dependencies:
   dependency_validator: ^4.1.0
   firebase_messaging: ^14.8.0
   firebase_core: ^2.28.0
+  notification_permissions: ^0.6.1
 
 dev_dependencies:
   flutter_test:
